page stars is done

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -106,6 +106,7 @@
         </div>
     </footer>
     <script src="js/simplebar.js"></script>
+    <script src="js/videotube.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
