--- a/app/components/header.html
+++ b/app/components/header.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
             href="https://unpkg.com/simplebar@latest/dist/simplebar.css"
         />
+        <link rel="stylesheet" href="css/videotube.min.css" />
         <link rel="stylesheet" href="css/style.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://kit.fontawesome.com/90e3df6b25.js" crossorigin="anonymous"></script>
