--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -68,3 +68,19 @@ body {
         color: $black;
     }
 }
+
+.videotube-modal-overlay {
+    background: none;
+}
+#videotube-modal-container {
+    background-color: rgba($color: #000000, $alpha: 0.9);
+}
+#videotube-modal-close {
+    text-shadow: none;
+    padding: 0;
+    right: 25px;
+}
+#videotube-modal-close:hover {
+    color: $orange;
+    background: none;
+}
