--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -20,6 +20,13 @@
             font-weight: 600;
         }
     }
+    &__min-title {
+        margin-top: 40px;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        color: $black;
+    }
     &__title-min {
         font-weight: 600;
         font-size: 24px;
@@ -61,6 +68,47 @@
         line-height: 32px;
         color: #fff;
     }
+    &__video-bg {
+        // background-image: url(../images/sun-include.jpg);
+        background-repeat: no-repeat;
+        object-fit: cover;
+        background-position: center;
+        border-radius: 32px 32px 32px 0;
+        width: 100%;
+        height: 432px;
+        position: relative;
+    }
+    &__video-btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: 0 auto;
+        transform: translate(-50%, -50%);
+        padding: 18px;
+        background-color: $orange;
+    }
+    &__definition {
+        margin-top: 56px;
+    }
+    &__definition-text {
+        padding-left: 48px;
+        position: relative;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 32px;
+        color: $black;
+        &::before {
+            content: '';
+            background-color: $orange;
+            position: absolute;
+            padding: 2px 16px;
+            left: 0;
+            top: 14px;
+        }
+    }
+    &__class-list {
+        margin-top: 16px;
+    }
 }
 .tabel-list {
     padding: 24px 32px;
@@ -77,6 +125,9 @@
         padding-bottom: 8px;
         margin-bottom: 16px;
         border-bottom: 1px solid #ac93ef;
+        &--orange {
+            border-bottom: 1px solid $orange;
+        }
     }
     &__wrapper {
         display: flex;
