--- a/app/scss/_var.scss
+++ b/app/scss/_var.scss
@@ -4,8 +4,10 @@
 $black: #323136;
 $grey: #f7f8fc;
 $dark-grey: #acb2c0;
+$light-grey: #f8f5ff;
 $red: #f05462;
 $orange: #ff6d49;
+
 // %main-font {
 
 // }
