page stellar-system is done

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -105,6 +105,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/lightgallery.umd.js"></script>
+
     <script src="js/simplebar.js"></script>
     <script src="js/videotube.min.js"></script>
     <script src="js/main.js"></script>
