--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -132,6 +132,31 @@
         line-height: 24px;
         color: $black;
     }
+    &__gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 32px;
+        &--2 {
+            margin-top: 40px;
+            grid-template-rows: repeat(1, 1fr);
+        }
+    }
+    &__gallery-link {
+        border-radius: 32px 32px 32px 0;
+    }
+    &__gallery-img {
+        border-radius: 32px 32px 32px 0;
+        width: 100%;
+        height: 100%;
+    }
+    &__gallery-caption {
+        margin-top: 30px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 28px;
+        color: $black;
+    }
 }
 .tabel-list {
     padding: 24px 32px;
