--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -106,7 +106,7 @@
         </div>
     </footer>
     <script src="js/lightgallery.umd.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/simplebar.js"></script>
     <script src="js/videotube.min.js"></script>
     <script src="js/main.js"></script>
