--- a/app/components/header.html
+++ b/app/components/header.html
@@ -19,6 +19,10 @@
         <link rel="stylesheet" href="css/videotube.min.css" />
         <link rel="stylesheet" href="css/videotube.min.css" />
         <link rel="stylesheet" href="/css/lightgallery-bundle.min.css" />
+        <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
 
         <link rel="stylesheet" href="css/style.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
