pages geography and geography_5 is done

--- a/app/scss/_article-component.scss
+++ b/app/scss/_article-component.scss
@@ -35,6 +35,9 @@
         width: 100%;
         border-radius: 64px 64px 64px 0;
     }
+    &--classes {
+        margin-top: 40px;
+    }
 }
 .article-date-time {
     margin-bottom: 56px;
