page about.html was adaptived

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -31,7 +31,43 @@
         line-height: 56px;
         color: $black;
     }
-    & .coaches__list-desc {
-        color: #333;
+    // вероятно на большом экране дизайнер не сменил цвет
+    // & .coaches__list-desc {
+    //     color: #333;
+    // }
+}
+@media (max-width: 412px) {
+    .mission {
+        margin-bottom: 80px;
+        margin-top: 24px;
+    }
+    .mission__content {
+        width: inherit;
+    }
+    .mission__content-title {
+        font-size: 28px;
+        line-height: 32px;
+    }
+    .mission__content-text {
+        font-size: 16px;
+        line-height: 20px;
+        width: 70%;
+    }
+    .mission::after {
+        right: 10px;
+        height: 267px;
+        width: 140px;
+        bottom: auto;
+        top: 0;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .command__content-title {
+        font-size: 28px;
+        line-height: 32px;
+        width: auto;
+    }
+    .command {
+        margin-bottom: 48px;
     }
 }
