page asteroids has been adaptived

--- a/app/scss/_article-component.scss
+++ b/app/scss/_article-component.scss
@@ -13,9 +13,9 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        gap: 32px;
     }
     &__img {
-        margin-right: 32px;
         border-radius: 32px 32px 32px 0;
     }
     &__link,
@@ -143,4 +143,96 @@
 .show-btn.article-items__dropbtn::before {
     content: '-';
     font-size: 50px;
+}
+
+@media (max-width: 412px) {
+    .main-head {
+        margin-top: 24px;
+    }
+    .main-head__title {
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 32px;
+    }
+    .author {
+        margin-top: 20px;
+    }
+    .author__wrapper {
+        gap: 12px;
+    }
+    .author__img {
+        border-radius: 16px 16px 16px 0;
+        width: 64px;
+        height: 64px;
+    }
+    .author__link {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .author__text {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+    }
+    .article-image {
+        margin-top: 28px;
+    }
+    .article-image__img {
+        border-radius: 32px 32px 32px 0;
+        height: 180px;
+    }
+    .article-date-time {
+        margin-top: 12px;
+        margin-bottom: 24px;
+    }
+    .article-date-time__date,
+    .article-date-time__time {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        margin-right: 28px;
+    }
+    .article-date-time__icon {
+        width: 16px;
+        height: 20px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        margin-right: 0;
+    }
+    .article-date-time__time {
+        padding-left: 22px;
+        display: inline;
+        position: relative;
+    }
+    .article-items__dropdown {
+        width: 100%;
+    }
+    .article-items__dropbtn {
+        width: 100%;
+        height: 64px;
+        border-radius: 16px 16px 16px 0;
+        padding: 20px 16px;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+
+        &::before {
+            right: 23px;
+            font-size: 30px;
+        }
+    }
+    .article-items__dropdown-content {
+        top: 64px;
+        border-radius: 0 0 16px 0;
+        & a {
+            font-size: 16px;
+            line-height: 20px;
+            padding: 6px 20px;
+        }
+    }
+    .show-btn {
+        border-radius: 16px 16px 0 0;
+    }
 }
