--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -84,3 +84,9 @@ body {
     color: $orange;
     background: none;
 }
+
+@media (max-width: 412px) {
+    .breadcrumbs__list {
+        display: block;
+    }
+}
