--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -51,6 +51,7 @@
     }
     &__example {
         margin-top: 40px;
+        margin-bottom: 24px;
     }
     &__example-caption {
         margin-top: 16px;
@@ -424,9 +425,11 @@
     .main-content__grey-bg {
         height: 180px;
         border-radius: 16px 16px 16px 0;
+        background-size: cover;
     }
     .main-content__example {
         margin-top: 24px;
+        margin-bottom: 8px;
     }
     .main-content__example-caption {
         font-weight: 400;
@@ -476,6 +479,43 @@
         grid-template-rows: auto;
     }
     .tabel-list__wrapper {
-        flex-wrap: wrap-reverse;
+        // flex-wrap: wrap-reverse;
+    }
+    .tabel-list__list:nth-child(1) {
+        order: 0;
+    }
+    .tabel-list__list:nth-child(2) {
+        order: 3;
+    }
+    .tabel-list__list:nth-child(3) {
+        order: 2;
+    }
+    .tabel-list__list:nth-child(4) {
+        order: 4;
+    }
+    .main-content__gallery {
+        margin-top: 24px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 8px;
+    }
+    .main-content__gallery-link {
+        border-radius: 16px 16px 16px 0;
+        height: 180px;
+    }
+    .main-content__gallery-caption {
+        margin-top: 8px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+    }
+    .main-content__planet-zoom {
+        margin-top: 24px;
+    }
+    .main-content__light-grey-bg {
+        margin-top: 24px;
+        height: 370px;
+    }
+    .main-content__planet-img {
+        width: 70%;
     }
 }
