--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,3 +1,21 @@
+@keyframes example {
+    from {
+        transform: translateY(-500px);
+    }
+    to {
+        transform: translateY(0px);
+    }
+}
+@keyframes example-reverse {
+    from {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-500px);
+    }
+}
 .header {
     height: 64px;
 
@@ -8,7 +26,10 @@
     &__logo,
     &__burger {
         padding-top: 15px;
-        z-index: 10;
+        padding-bottom: 17px;
+
+        z-index: 999;
+        background-color: #fff;
     }
 
     &__wrapper {
@@ -16,6 +37,9 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+
+        // background-color: red;
+        z-index: 999;
     }
     &__logo-title {
         font-family: 'Red Rose', serif;
@@ -37,32 +61,84 @@
         }
     }
 
-    &__burger-btn {
-        background: none;
-        border: none;
+    &__burger {
+        width: 24px;
+        height: 18px;
         cursor: pointer;
+        // right: 2rem;
+        // top: 2rem;
+        z-index: 20;
+    }
+
+    &__burger span {
+        width: 80%;
+        height: 3px;
+        background-color: black;
+        border-radius: 12px;
+        display: block;
+        transform: scaleX(-1);
+        transition: background-color 0.5s ease-in-out;
+    }
+
+    &__burger span::before,
+    &__burger span::after {
+        content: '';
+        width: 24px;
+        background-color: black;
+        display: block;
+        transition: all 0.5s ease-in-out;
+        border-radius: 12px;
+        height: 3px;
+    }
+
+    &__burger span::before {
+        transform: translateY(-8px);
+    }
+
+    &__burger span::after {
+        transform: translateY(8px);
+        margin-top: -3px;
+    }
+
+    &__burger.active span {
+        background-color: transparent;
+    }
+
+    &__burger.active span::before {
+        transform: rotateZ(-45deg) translateY(0);
+    }
+
+    &__burger.active span::after {
+        transform: rotateZ(45deg) translateY(0);
     }
 
     &__menu {
         padding: 30px;
 
         width: 100%;
+        // display: none;
+        visibility: hidden;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         position: relative;
-        transform: translateY(-1000px);
-        opacity: 0.1;
-        transition: all 1s;
+        animation-name: example-reverse;
+        animation-duration: 0.5s;
+        transition: all 0.5s;
+        z-index: 1;
         &--open {
-            opacity: 1;
-            transform: translateY(17px);
-
+            visibility: visible;
+            animation-name: example;
+            animation-duration: 0.5s;
+            transition: all 0.5s;
+            transform: translateY(0px);
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
             -webkit-box-shadow: inset 0px 2px 5px -1px rgba(0, 0, 0, 0.37);
             -moz-box-shadow: inset 0px 2px 5px -1px rgba(0, 0, 0, 0.37);
             box-shadow: inset 0px 2px 5px -1px rgba(0, 0, 0, 0.37);
         }
-        z-index: 1;
         background-color: #fff;
     }
     &__menu-title {
